tests/spec/parse/snapshots/slice_pattern_suffix.snap
---
source: tests/spec/parse/mod.rs
description: |
  
  fn test(items: Slice<int>) {
    match items {
      [..init, last] => print("last is", last),
      [] => print("empty"),
    }
  }
---
[
    Function {
        doc: None,
        attributes: [],
        name: "test",
        name_span: Span {
            file_id: 0,
            byte_offset: 4,
            byte_length: 4,
        },
        generics: [],
        params: [
            Binding {
                pattern: Identifier {
                    identifier: "items",
                    span: Span {
                        file_id: 0,
                        byte_offset: 9,
                        byte_length: 5,
                    },
                    binding: None,
                },
                annotation: Some(
                    Constructor {
                        name: "Slice",
                        params: [
                            Constructor {
                                name: "int",
                                params: [],
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 22,
                                    byte_length: 3,
                                },
                            },
                        ],
                        span: Span {
                            file_id: 0,
                            byte_offset: 16,
                            byte_length: 10,
                        },
                    },
                ),
                ty: Var {
                    id: uninferred,
                },
            },
        ],
        return_annotation: Unknown,
        return_type: Var {
            id: uninferred,
        },
        visibility: Private,
        body: Definition(
            Block {
                items: [
                    Match {
                        subject: Identifier {
                            value: "items",
                            ty: Var {
                                id: uninferred,
                            },
                            span: Span {
                                file_id: 0,
                                byte_offset: 38,
                                byte_length: 5,
                            },
                            resolution: Unresolved,
                        },
                        arms: [
                            MatchArm {
                                pattern: Slice {
                                    prefix: [],
                                    rest: Bind {
                                        name: "init",
                                        span: Span {
                                            file_id: 0,
                                            byte_offset: 53,
                                            byte_length: 4,
                                        },
                                        binding: None,
                                    },
                                    resolution: Unresolved,
                                    span: Span {
                                        file_id: 0,
                                        byte_offset: 50,
                                        byte_length: 14,
                                    },
                                },
                                expression: Call {
                                    expression: Identifier {
                                        value: "print",
                                        ty: Var {
                                            id: uninferred,
                                        },
                                        span: Span {
                                            file_id: 0,
                                            byte_offset: 68,
                                            byte_length: 5,
                                        },
                                        resolution: Unresolved,
                                    },
                                    args: [
                                        Literal {
                                            literal: String {
                                                value: "last is",
                                                raw: false,
                                            },
                                            ty: Var {
                                                id: uninferred,
                                            },
                                            span: Span {
                                                file_id: 0,
                                                byte_offset: 74,
                                                byte_length: 9,
                                            },
                                        },
                                        Identifier {
                                            value: "last",
                                            ty: Var {
                                                id: uninferred,
                                            },
                                            span: Span {
                                                file_id: 0,
                                                byte_offset: 85,
                                                byte_length: 4,
                                            },
                                            resolution: Unresolved,
                                        },
                                    ],
                                    spread: None,
                                    type_arguments: None,
                                    ty: Var {
                                        id: uninferred,
                                    },
                                    span: Span {
                                        file_id: 0,
                                        byte_offset: 68,
                                        byte_length: 22,
                                    },
                                    call_kind: Unresolved,
                                },
                            },
                            MatchArm {
                                pattern: Slice {
                                    prefix: [],
                                    rest: Absent,
                                    resolution: Unresolved,
                                    span: Span {
                                        file_id: 0,
                                        byte_offset: 96,
                                        byte_length: 2,
                                    },
                                },
                                expression: Call {
                                    expression: Identifier {
                                        value: "print",
                                        ty: Var {
                                            id: uninferred,
                                        },
                                        span: Span {
                                            file_id: 0,
                                            byte_offset: 102,
                                            byte_length: 5,
                                        },
                                        resolution: Unresolved,
                                    },
                                    args: [
                                        Literal {
                                            literal: String {
                                                value: "empty",
                                                raw: false,
                                            },
                                            ty: Var {
                                                id: uninferred,
                                            },
                                            span: Span {
                                                file_id: 0,
                                                byte_offset: 108,
                                                byte_length: 7,
                                            },
                                        },
                                    ],
                                    spread: None,
                                    type_arguments: None,
                                    ty: Var {
                                        id: uninferred,
                                    },
                                    span: Span {
                                        file_id: 0,
                                        byte_offset: 102,
                                        byte_length: 14,
                                    },
                                    call_kind: Unresolved,
                                },
                            },
                        ],
                        ty: Var {
                            id: uninferred,
                        },
                        span: Span {
                            file_id: 0,
                            byte_offset: 32,
                            byte_length: 89,
                        },
                    },
                ],
                ty: Var {
                    id: uninferred,
                },
                span: Span {
                    file_id: 0,
                    byte_offset: 28,
                    byte_length: 95,
                },
            },
        ),
        ty: Var {
            id: uninferred,
        },
        span: Span {
            file_id: 0,
            byte_offset: 1,
            byte_length: 122,
        },
    },
]
